@@ -2,6 +2,10 @@ The current version of Ruby Reports is 0.4.19
 
 changes since 0.4.17
 
+- Made method_missing a lot more friendly all around.
+
+- Made minor interface changes.
+
 - Data::Table and Data::Record now dup correctly
 
 - Fixed some serious issues between Data::Table and TextPlugin
